# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
include/: board.h
src/: board.c  main.c
